--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bulma": "latest",
+    "bulmaswatch": "^0.8.1",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "5.2.0",
